# Rapier-Bug-Swatting

./: .gitignore  Cargo.toml  README.md
assets/structures/: atmospheric_setup.arch  jiggled_tree.arch  random_rock.arch  random_tree.arch  tree_cluster.arch
assets/structures/REFERENCE/: gate_3x1x2.arch  jiggled_castle.arch  maybe_tower.arch  path_test.arch  tower.arch
examples/: minimal.rs
imported_assets/Default/structures/: jiggled_obstacle.arch  noise_spawn_obstacles.arch  random_obstacle.arch
imported_assets/Default/structures/REFERENCE/: example.arch  loop_test.arch  nesting_loop_test.arch  noise_spawn_test.arch  random_bit.arch  random_bit_list.arch  random_bit_multiple.arch  reflect_castles.arch  tiny_castle.arch  wall_1x1x2.arch  wall_3x1x2.arch
src/: euler_transform.rs  generation.rs  main.rs  material_autoloader.rs  structure.rs
